--- a/app/src/main/res/menu/menu_context_project.xml
+++ b/app/src/main/res/menu/menu_context_project.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/task_project"
+        android:icon="@drawable/twotone_task_24"
+        android:title="@string/task_project"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/update_project"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/update_project"
