--- a/app/src/main/res/menu/menu_context_task.xml
+++ b/app/src/main/res/menu/menu_context_task.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/new_task"
         android:icon="@drawable/vect_add_24"
         android:title="@string/create_task"
         app:showAsAction="ifRoom" />
