--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="21">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="titleTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:height">30dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="textTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:height">30dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 </resources>
