feat: Finalizada a tela de tarefas

--- a/app/src/main/res/layout/activity_task_view.xml
+++ b/app/src/main/res/layout/activity_task_view.xml
@@ -50,7 +50,6 @@
 
     <TextView
         android:id="@+id/taskDescriptionView"
-        style="@style/textTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -58,6 +57,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:padding="8dp"
         android:text="Description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
