--- a/app/src/main/res/menu/menu_task.xml
+++ b/app/src/main/res/menu/menu_task.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/editTaskList"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:title="@string/update_project"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/deleteTaskList"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/delete_option_project"
